# flox-exec

./: .gitignore  pyproject.toml
flox_exec/: __init__.py  command.py
